Control JMH using jmh:run args instead of custom Runner